# smallpt-rs

./: .gitignore  Cargo.toml  README.md  image.ppm
ray/: Cargo.toml
ray/src/: lib.rs
sphere/: Cargo.toml
sphere/src/: lib.rs
src/: main.rs
threadpool/: Cargo.toml
threadpool/src/: lib.rs
vec3/: Cargo.toml
vec3/src/: lib.rs
