[package]
name = "smallpt-rs"
version = "0.1.0"
authors = ["Jiaming Mao <jiamingm@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.5.5"
scoped_threadpool="0.1.6"
vec3 = {path = "vec3"}
ray = {path = "ray"}
sphere = {path = "sphere"}
threadpool = {path = "threadpool"}